Fix enum naming in Overview docs and improve documentation
- Fix enum values from SCREAMING_SNAKE_CASE to PascalCase in Overview files
  - Account_Information.Overview.md (AccountBalance, AccountLeverage, AccountCurrency)
  - Symbol_Information.Overview.md (SymbolSpread + correct type name)
  - Position_Orders_Information.Overview.md (Bmt5SortByCloseTimeDesc)
  - Trading_Operations.Overview.md (TradeActionDeal, OrderTypeTfBuy)
  - Additional_Methods.Overview.md (OrderTypeBuy)

- Fix broken links in Getting_Started.md (MT5_For_Beginners.md)
- Complete PROJECT_MAP.md with missing documentation files
- Remove index.md from progress tracking
- Update .gitignore to exclude __pycache__ and temp files
- Add #pragma directives to suppress nullable warnings in MT5Account.cs
- Add header comments to exception classes

--- a/.gitignore
+++ b/.gitignore
@@ -366,5 +366,10 @@ FodyWeavers.xsd
 # MkDocs build output
 site/
 
-# Local settings
-.claude/settings.local.json
+# Local CLI files
+.claude/
+
+# Temporary report files
+*_link_check_*.md
+*_link_check_*.txt
+check_links.py
