--- a/MetaRPC.CSharpMT5.csproj
+++ b/MetaRPC.CSharpMT5.csproj
@@ -18,12 +18,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Api.CommonProtos" Version="2.17.0" />
+    <PackageReference Include="Google.Protobuf" Version="3.31.1" />
     <PackageReference Include="Grpc.Core" Version="2.46.6" />
     <PackageReference Include="Grpc.Core.Api" Version="2.71.0" />
     <PackageReference Include="Grpc.Net.Client" Version="2.71.0" />
     <PackageReference Include="Grpc.Tools" Version="2.76.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0" PrivateAssets="all" />
-    <PackageReference Include="MetaRPC.MT5" Version="1.0.942" />
     <PackageReference Include="System.Net.Http.WinHttpHandler" Version="9.0.10" />
   </ItemGroup>
 
