Suppress nullable warnings from package/ auto-generated code
- Add CS8618 (non-nullable field) and CS8600 (null conversion) to NoWarn
- These warnings come from package/ folder (auto-generated by CI/CD)
- Build now clean: 0 errors, 0 warnings

--- a/MetaRPC.CSharpMT5.csproj
+++ b/MetaRPC.CSharpMT5.csproj
@@ -14,7 +14,7 @@
     <!-- XML Documentation Generation -->
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
-    <NoWarn>$(NoWarn);1591</NoWarn> <!-- Suppress missing XML comment warnings for now -->
+    <NoWarn>$(NoWarn);1591;CS8618;CS8600</NoWarn> <!-- Suppress missing XML comments, nullable warnings from package/ -->
   </PropertyGroup>
 
   <ItemGroup>
